Bug 168466 - Current Track Info applet text does not match system color
Summary: Current Track Info applet text does not match system color
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View (other bugs)
Version First Reported In: 2.0-SVN
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-06 04:52 UTC by a thing
Modified: 2009-12-09 11:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description a thing 2008-08-06 04:52:16 UTC
Version:           2.0-svn (using KDE 4.1.0)
Installed from:    Fedora RPMs

http://img395.imageshack.us/img395/2704/currenttrackinfody4.png

The lyrics applet gets the text color correct, though.
Comment 1 a thing 2008-08-08 23:31:11 UTC
This is mostly fixed. However, when the "No track playing" message is displayed, the text is surrounded with white.

http://img45.imageshack.us/img45/7553/notrackplayingtx0.png
Comment 2 a thing 2008-08-24 04:35:58 UTC
There has been a regression on this. It is now like the first screenshot.
Comment 3 Leo Franchi 2008-09-02 19:01:35 UTC
fixed in r856330
Comment 4 a thing 2008-09-07 18:28:02 UTC
There has been another regression.
Comment 5 Mark Kretschmann 2008-09-16 17:34:11 UTC
Fixed with SVN commit 861596 by nhnielsen.