fix text color of current applet, now works on dark color schemes

BUG: 168466

svn path=/trunk/extragear/multimedia/amarok/; revision=856330